Fix many bugs with screenshotting and too large messages Fixes #1

--- a/popup.css
+++ b/popup.css
@@ -22,12 +22,17 @@ body {
   font-family: sans-serif;
   font-size: 0.85rem;
   overscroll-behavior: none;
+  padding: 0;
+}
+
+main {
   padding: 1rem;
 }
 
 h1,
 h2 {
   white-space: nowrap;
+  color: var(--accent-color);
 }
 
 h1 {
@@ -36,7 +41,6 @@ h1 {
 
 h2 {
   font-size: 0.85rem;
-  color: var(--accent-color);
   margin-block-end: 0.25rem;
 }
 
@@ -158,9 +162,6 @@ li {
 footer {
   background-color: var(--footer-background-color);
   width: 100%;
-  position: fixed;
-  bottom: 0;
-  left: 0;
   font-size: 0.65rem;
   padding-block: 0.35rem 0.25rem;
   padding-inline: 0.25rem;
